successfully linked with listview and sqlite

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context="com.mashpy.nstuinfo.MainActivity" >
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
