--- a/res/layout/activity_nstu_info_details.xml
+++ b/res/layout/activity_nstu_info_details.xml
@@ -8,13 +8,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.mashpy.nstuinfo.NstuInfoDetails" >
 
-    <TextView
-        android:id="@+id/finalTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="102dp"
-        android:text="TextView" />
+    <WebView
+        android:id="@+id/webView1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
