trying to style the layout

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,21 +1,38 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mashpy.nstuinfo.MainActivity" >
+    tools:context="com.mashpy.nstuinfo.MainActivity"
+    android:background="#ffffffff" >
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:text="@string/uniname"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textSize="15sp"
+        android:paddingTop="10dip"
+        android:paddingBottom="10dip"
+        android:textColor="#ff000000"
+        android:background="#ffffffff"
+        android:gravity="center" />
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="130dp"
-        android:layout_marginTop="139dp" >
+        android:layout_gravity="center"
+        android:drawSelectorOnTop="false"
+        android:gravity="center" >
+
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
