--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,26 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context="com.mashpy.nstuinfo.MainActivity"
-    android:background="#ffffffff" >
+     >
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:background="#01579b"
+        android:gravity="center"
+        android:paddingBottom="6dip"
+        android:paddingTop="6dip"
         android:text="@string/uniname"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="20sp"
-        android:paddingTop="0dip"
-        android:paddingBottom="10dip"
-        android:textColor="#ff000000"
-        android:background="#ffffffff"
-        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:textSize="21sp"
         android:typeface="serif" />
 
     <ListView
@@ -32,7 +29,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:drawSelectorOnTop="false"
-        android:gravity="center" >
+        android:gravity="center"
+      
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+         >
 
     </ListView>
 
