--- a/res/layout/simple_list_item_1.xml
+++ b/res/layout/simple_list_item_1.xml
@@ -1,10 +1,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@android:id/text1"
-    android:background="#ffffffff"
-    android:paddingTop="2dip"
-    android:paddingBottom="3dip"
-    android:textSize="20sp"
+	android:background="@drawable/red_button"
+	android:gravity="center"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:typeface="serif" />
+    android:typeface="serif"
+    style="@style/button_text" />
