--- a/res/drawable/red_button.xml
+++ b/res/drawable/red_button.xml
@@ -18,8 +18,9 @@
   <item>
     <shape>
       <gradient
-          android:startColor="#03a9f4"
-          android:endColor="#3f51b5"
+
+		android:startColor="#65C19C"
+		android:endColor="#26a69a"
           android:angle="270" />
       <stroke
           android:width="1dp"
