--- a/res/drawable/red_button.xml
+++ b/res/drawable/red_button.xml
@@ -7,7 +7,7 @@
           android:width="1dp"
           android:color="#992f2f" />
       <corners
-          android:radius="6dp" />
+          android:radius="4dp" />
       <padding
           android:left="10dp"
           android:top="10dp"
@@ -23,10 +23,10 @@
 		android:endColor="#26a69a"
           android:angle="270" />
       <stroke
-          android:width="1dp"
-          android:color="#992f2f" />
+          android:width=".5dp"
+          android:color="#26a69a" />
       <corners
-          android:radius="6dp" />
+          android:radius="4dp" />
       <padding
           android:left="10dp"
           android:top="10dp"
