--- a/res/layout/activity_nstu_info_details.xml
+++ b/res/layout/activity_nstu_info_details.xml
@@ -1,6 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,6 +10,7 @@
         android:id="@+id/webView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
- />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" />
 
-</LinearLayout>
+</RelativeLayout>
