--- a/res/drawable/red_button.xml
+++ b/res/drawable/red_button.xml
@@ -2,7 +2,7 @@
   <item android:state_pressed="true" >
     <shape>
       <solid
-          android:color="#ef4444" />
+          android:color="#01579b" />
       <stroke
           android:width="1dp"
           android:color="#992f2f" />
@@ -19,12 +19,12 @@
     <shape>
       <gradient
 
-		android:startColor="#65C19C"
-		android:endColor="#26a69a"
+		android:startColor="#03a9f4"
+		android:endColor="#039be5"
           android:angle="270" />
       <stroke
           android:width=".5dp"
-          android:color="#26a69a" />
+          android:color="#bdbdbd" />
       <corners
           android:radius="4dp" />
       <padding
