--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:background="#009688"
+        android:background="#0288d1"
         android:gravity="center"
         android:paddingBottom="6dip"
         android:paddingTop="6dip"
