--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -20,12 +20,12 @@
   <style name="button_text" >
     <item name="android:layout_width" >fill_parent</item>
     <item name="android:layout_height" >wrap_content</item>
-    <item name="android:textColor" >#ffffff</item>
+    <item name="android:textColor" >#FFFFFF</item>
     <item name="android:gravity" >center</item>
     <item name="android:layout_margin" >3dp</item>
     <item name="android:textSize" >20sp</item>
 
-    <item name="android:shadowColor" >#000000</item>
+    <item name="android:shadowColor" >#01579b</item>
     <item name="android:shadowDx" >1</item>
     <item name="android:shadowDy" >1</item>
     <item name="android:shadowRadius" >2</item>
