Make the DetailsActivity as FullScreen Activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="year">#999999</color>
     <color name="title">#222222</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
