Add Progress Bar

--- a/app/src/main/res/layout/article_list_row.xml
+++ b/app/src/main/res/layout/article_list_row.xml
@@ -48,13 +48,15 @@
             <TextView
                 android:id="@+id/genre"
                 android:layout_width="234dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
 
             <TextView
                 android:id="@+id/year"
                 android:textColor="@color/year"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="15"/>
 
 
         </LinearLayout>
