Add Defult  Color and Now I try to add color from JSON

--- a/app/src/main/res/layout/article_list_row.xml
+++ b/app/src/main/res/layout/article_list_row.xml
@@ -8,6 +8,7 @@
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:clickable="true"
+    android:id="@+id/list_row"
     android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical">
     <LinearLayout
