--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.mashpy.nstuinfo.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:id="@+id/clearAll"
+        android:orderInCategory="98"
+        android:title="@string/clear"
+        />
+    <item
+        android:id = "@+id/action_settings"
+        android:orderInCategory="99"
         android:title="@string/action_settings"
+        />
+    <item
+        android:id="@+id/about"
+        android:orderInCategory="100"
+        android:title="@string/about"
         app:showAsAction="never" />
 </menu>
