--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="year">#999999</color>
     <color name="title">#222222</color>
+    <color name = "white">#fff</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
