--- a/app/src/main/res/layout/content_about.xml
+++ b/app/src/main/res/layout/content_about.xml
@@ -114,7 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Copyright (C) 2016 MD: Akhlasur Rahman(Mashpy)"
+                android:text="Copyright © 2016 NSTUinfo"
                 android:id="@+id/licence"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="6dp"
