--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="year">#999999</color>
+    <color name="about_background">#f1efef</color>
     <color name="title">#222222</color>
     <color name = "white">#fff</color>
 
