--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -47,7 +47,8 @@
             android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/dateTV">
+            android:layout_above="@+id/dateTV"
+            android:layout_alignParentTop="true">
 
             <LinearLayout
                 android:id="@+id/mainLL"
@@ -66,6 +67,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_above="@+id/dateTV"
+            android:layout_alignParentTop="true"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
