Ready to publish

--- a/app/src/main/res/layout/content_view2.xml
+++ b/app/src/main/res/layout/content_view2.xml
@@ -23,7 +23,9 @@
             android:id="@+id/contentViewLL"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
 
 
         </LinearLayout>
