changed the package name

--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/coordinatorLayout"
-    tools:context="com.mashpy.nstuinfo.HomeActivity">
+    tools:context="com.nstuinfo.HomeActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
