--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.mashpy.nstuinfo.DetailsActivity"
+    tools:context="com.nstuinfo.DetailsActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/detailsMainLL"
