--- a/app/src/main/res/layout/content_webview.xml
+++ b/app/src/main/res/layout/content_webview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.mashpy.nstuinfo.WebviewActivity"
+    tools:context="com.nstuinfo.WebviewActivity"
     tools:showIn="@layout/activity_webview">
 
     <RelativeLayout
