--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -40,4 +40,12 @@
         </menu>
     </item>
 
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_check_update"
+            android:checkable="false"
+            android:icon="@drawable/ic_action_sync"
+            android:title="Check Update" />
+    </group>
+
 </menu>
