--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -36,6 +36,7 @@
 
     <include layout="@layout/content_home" />
 
+    <!--
     <ImageButton
         android:id="@+id/syncBtn"
         android:layout_width="wrap_content"
@@ -44,6 +45,6 @@
         android:layout_margin="10dp"
         android:padding="3dp"
         android:background="@drawable/circle_shape"
-        app:srcCompat="@drawable/ic_action_sync" />
+        app:srcCompat="@drawable/ic_action_sync" />-->
 
 </android.support.design.widget.CoordinatorLayout>
