--- a/app/src/main/res/layout/image_content_view.xml
+++ b/app/src/main/res/layout/image_content_view.xml
@@ -15,7 +15,7 @@
         android:id="@+id/imageContentImgView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/nstu_cover_1"
+        android:src="@drawable/vc_primeminister"
         android:layout_centerHorizontal="true"/>
 
     <TextView
