--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,6 +7,22 @@
     tools:context=".SplashScreenActivity"
     android:background="@color/splash_screen_bg_color">
 
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="10dp"
+        android:layout_alignStart="@+id/topIM"
+        android:layout_alignLeft="@+id/topIM"
+        android:layout_alignEnd="@+id/topIM"
+        android:layout_alignRight="@+id/topIM"
+        android:layout_alignParentTop="true"
+        android:background="@color/splash_sc_top_bg_color"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/splash_sc_bottom_bg_color"/>
+
     <ImageView
         android:visibility="visible"
         android:id="@+id/topIM"
