--- a/app/src/main/res/layout/expandable_content_view.xml
+++ b/app/src/main/res/layout/expandable_content_view.xml
@@ -19,19 +19,24 @@
         app:cardCornerRadius="5dp"
         app:cardElevation="0dp">
 
-        <at.blogc.android.views.ExpandableTextView
-            android:id="@+id/expandableTextView"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/about_nstu"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/md_grey_900"
-            android:textStyle="normal"
-            android:gravity="start"
-            android:maxLines="8"
-            android:ellipsize="end"
-            app:animation_duration="750"
-            android:padding="5dp"/>
+            android:orientation="vertical">
+            <at.blogc.android.views.ExpandableTextView
+                android:id="@+id/expandableTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/about_nstu"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/md_grey_900"
+                android:textStyle="normal"
+                android:gravity="start"
+                android:maxLines="8"
+                android:ellipsize="end"
+                app:animation_duration="750"
+                android:padding="5dp"/>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
