remove pic of vc sir and linking the test apis

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -219,7 +219,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="150dp"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/vc_sir"/>
+                    android:src="@drawable/nstu_cover_7"/>
 
                 <TextView
                     android:id="@+id/txt3"
