--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -43,16 +43,16 @@
         android:visibility="visible"
         android:id="@+id/bottomIM2"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="180dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/nstu_cover_2"
-        android:layout_marginBottom="100dp"
+        android:background="@drawable/nstu_cover_4"
+        android:layout_marginBottom="90dp"
         android:layout_marginLeft="40dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="15dp"/>
     
     <ImageView
         android:visibility="visible"
@@ -65,21 +65,46 @@
         android:scaleType="fitEnd"
         android:layout_margin="0dp"/>
 
-    <ImageView
-        android:visibility="visible"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/middleShapeRL"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/topIM"
         android:layout_above="@id/bottomIM2"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/sp_sc_middle"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        android:paddingTop="0dp"
-        android:paddingBottom="0dp"/>
+        android:layout_marginTop="180dp"
+        android:layout_marginBottom="0dp">
+
+        <TextView
+            android:id="@+id/uniTitleTV"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/university_name"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold"
+            android:textColor="@color/md_grey_200"
+            android:textAlignment="center"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"/>
+
+        <ImageView
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_above="@id/uniTitleTV"
+            android:src="@mipmap/ic_launcher_round"
+            android:padding="20dp"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
