--- a/app/src/main/res/layout/content_view_tvs.xml
+++ b/app/src/main/res/layout/content_view_tvs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,12 +13,14 @@
         android:textStyle="normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:justificationMode="inter_word"
         android:paddingEnd="5dp"
         android:paddingRight="5dp"
         android:paddingLeft="5dp"
         android:paddingStart="5dp"
         android:paddingTop="0dp"
-        android:paddingBottom="0dp"/>
+        android:paddingBottom="0dp"
+        tools:ignore="UnusedAttribute" />
 
     <ImageView
         android:id="@+id/iconImageView"
