--- a/app/src/main/res/layout/title_view.xml
+++ b/app/src/main/res/layout/title_view.xml
@@ -12,7 +12,7 @@
     android:paddingEnd="5dp"
     android:paddingRight="5dp">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/title_item_view_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,6 +36,6 @@
             android:paddingEnd="5dp"
             android:paddingRight="5dp"/>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
