--- a/app/src/main/res/menu/menu_details.xml
+++ b/app/src/main/res/menu/menu_details.xml
@@ -6,7 +6,7 @@
         app:showAsAction="always|collapseActionView"
         android:icon="@drawable/ic_action_search"
         android:id="@+id/menu_item_search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         android:title="Search"
         android:orderInCategory="100"/>
 
